syntax = "proto3";

option go_package = "pb/game";

message SkillPBComp
{
  uint64 ability_table_id = 1;
}
